# axum-admin

./: Cargo.toml  README.md  deny.toml
migrations/: 20240628081208_init.sql
web_core/: Cargo.toml
web_core/examples/: casbin.rs  oso.rs
web_core/src/: lib.rs
web_core/src/utils/: jwt.rs
web_server/: Cargo.toml
web_server/src/: main.rs
web_server/src/models/: user.rs
