[workspace]
members = ["web_core", "web_server"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = { version = "0.7.5", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
  # "macros",
] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
jwt-simple = "0.12.9"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
web-core = { path = "./web_core" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
